<?xml version="1.0"?>
<package format="3">
  <name>micro_epsilon_scancontrol_description</name>
  <version>0.1.0</version>
  <description>URDFs for the Micro-Epsilon scanCONTROL laser profile sensors.</description>
  <maintainer email="d.kroezen@tudelft.nl">Dave Kroezen</maintainer>

  <url type="repository">https://github.com/sam-xl/scancontrol</url>
  <author>Rik Tonnaer</author>
  <author>Dave Kroezen</author>

  <license>BSD</license> 

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent />
    <build_type>ament_cmake</build_type>
  </export>
</package>
