<?xml version="1.0"?>
<package format="3">
  <name>micro_epsilon_scancontrol_driver</name>
  <version>0.0.1</version>
  <description>Micro Espsilon scanCONTROL sensor driver</description>
  <maintainer email="r.tonnear@tudelft.nl">Rik Tonnear</maintainer>
  <maintainer email="d.kroezen@tudelft.nl">Dave Kroezen</maintainer>

  <url type="repository">https://github.com/sam-xl/scancontrol</url>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>pcl_ros</depend>
  <depend>nodelet</depend>

  <depend>micro_epsilon_scancontrol_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/me_scancontrol_nodelet.xml"/>
  </export>
</package>
