<?xml version="1.0"?>
<package format="2">
  <name>micro_epsilon_scancontrol_msgs</name>
  <version>0.0.1</version>
  <description>Micro Espsilon scanCONTROL Driver Messages</description>
  
  <maintainer email="r.tonnear@tudelft.nl">Rik Tonnear</maintainer>
  <maintainer email="d.kroezen@tudelft.nl">Dave Kroezen</maintainer>

  <url type="repository">https://gitlab.tudelft.nl/dasml/micro_epsilon_scancontrol</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
</package>
