<?xml version="1.0"?>
<package format="3">
  <name>micro_epsilon_scancontrol_msgs</name>
  <version>0.0.1</version>
  <description>Micro Espsilon scanCONTROL Driver Messages</description>
  
  <maintainer email="r.tonnear@tudelft.nl">Rik Tonnear</maintainer>
  <maintainer email="d.kroezen@tudelft.nl">Dave Kroezen</maintainer>

  <url type="repository">https://gitlab.tudelft.nl/dasml/micro_epsilon_scancontrol</url>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
