<?xml version="1.0"?>
<package format="2">
  <name>scancontrol</name>
  <version>0.0.1</version>
  <description>Micro Espsilon scanCONTROL sensor driver</description>
  <maintainer email="r.tonnear@tudelft.nl">Rik Tonnear</maintainer>
  <maintainer email="d.kroezen@tudelft.nl">Dave Kroezen</maintainer>

  <url type="repository">https://gitlab.tudelft.nl/dasml/micro_epsilon_scancontrol</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>pcl_ros</depend>
  <depend>nodelet</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_scancontrol.xml"/>
    <rqt_gui plugin="${prefix}/me_scancontrol_gui.xml"/>
  </export>
</package>
